# notebook

./: .gitignore  404.html  README.md  blog_feed.xml  changelog.html  changelog.yml  done.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  notes_feed.xml  pyproject.toml  sitemap.xml  todo.html
blog/: index.html  tags.html
blog/archive/: 2024.html  2025.html
blog/category/: ai.html  chaos.html  ctf.html  cve-roulette.html  hackerrank.html  malware-analysis.html  programming-language.html  racketrank.html  random-ramblings.html  scientific-witchery.html  security.html
blog/page/2/: index.html
cs/: index.html
cs/compiler/: index.html
cs/os/: index.html  mit6.1810.html  ostep.html  rcore.html
cs/os/ostep/: index.html  (+16 more)
cs/pl/: index.html
ctf/: index.html
docs/: changelog.md  changelog.yml  done.md  index.md  todo.md
docs/cs/: index.md
docs/gamedev/: index.md
docs/stylesheets/: custom.css
docs/writeups/: dicectf2024_quals.md  index.md
drama/: index.html
drama/screenwriting/: format_hollywood.html  index.html
gamedev/: index.html
gamedev/ai/: index.html
hooks/: toc.py
hooks/templates/: toc.html
hooks/utils/: stats.py
overrides/partials/: copyright.html  toc-item.html
search/: search_index.js  search_index.json
sec/: index.html
sec/incidents/: powerghost.html
sec/malwares/: powerghost.html
stylesheets/: custom.css  toc.css
writeups/: dicectf2024_quals.html  index.html
writeups/2024/: dicectf2024_quals.html  hackergame2024.html  svuctf_spring_2024.html
(+123 files in other folders)
